# Music-Platform-project

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
albums/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_is_approved.py  0002_alter_album_cost.py  0003_remove_album_creation_datetime_album_created_and_more.py  0004_song.py  0005_alter_song_audio_file.py
albums/templates/: album_create.html
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_created_artist_modified.py  0002_artist_user.py
artists/templates/: artist_create.html  artist_with_albums.html
artists/tests/: test_endpoints.py
authentication/: serializers.py  urls.py  views.py
authentication/templates/: register.html  signin.html  signout.html
authentication/tests/: test_endpoints.py
musicplatform/: celery.py  settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_endpoints.py
